--- a/Entregas/style.css
+++ b/Entregas/style.css
@@ -227,6 +227,11 @@ form#formAdicionarEntrega {
     gap: 10px;
 }
 
+
+.checkbox-item.antecipada {
+    color: #ff8b8b;
+}
+
 .buttons {
     text-align: center;
     font-size: 0.9rem;
@@ -326,6 +331,7 @@ form#formAdicionarEntrega {
     color: #ffbf00;
     font-weight: 600;
 }
+
 
 
 /* ===== ANIMAÇÃO ===== */
