--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -4,7 +4,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 /* Global color variables (defaults for light mode) */
@@ -780,7 +780,7 @@ table#tabela-obra tbody tr:hover {
 #tabela-obra tbody td,
 #tabela-obra th {
     border: 1px solid black;
-    font-size: 13px;
+    font-size: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
